tests/baselines/reference/parserGreaterThanTokenAmbiguity12.errors.txt
parserGreaterThanTokenAmbiguity12.ts(1,6): error TS1109: Expression expected.


==== parserGreaterThanTokenAmbiguity12.ts (1 errors) ====
    1 >> = 2;
         ~
!!! error TS1109: Expression expected.